# CaptionMan

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.demo  LICENSE  Makefile  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: README.md  pyproject.toml
apps/api/app/cli/: commands.py
apps/api/app/core/: budget.py  config.py  fallbacks.py  job_runner.py  pipeline.py  stage_events.py  stop_rules.py
apps/api/app/court/: batched_judges.py  candidate_generator.py  caption_safety.py  final_selector.py  hard_rules.py  repair_agent.py  style_policy.py
apps/api/app/evidence/: evidence_merger.py  evidence_schema.py  timeline_builder.py  uncertainty.py
apps/api/app/io/: official_schema.py  result_validator.py  result_writer.py  schema_adapter.py  schema_lock.py  task_loader.py
apps/api/app/providers/: base.py  fireworks.py  fireworks_direct.py  json_call.py  mock.py  model_registry.py  proxy.py
apps/api/app/server/: main.py
apps/api/app/utils/: atomic_write.py  ids.py  paths.py  redaction.py  timeouts.py  url_security.py
apps/api/tests/: test_atomic_write.py  test_budget.py  test_caption_safety.py  test_credentials.py  test_demo_api_artifacts.py  test_doctor.py  test_downloader_security.py  test_fallbacks.py  test_fireworks_quality.py  test_frame_sampler.py  test_hard_rules.py  test_mock_pipeline.py  test_official_mode.py  test_prompt_loading.py  test_result_writer_validation.py  test_run_input_resolution.py  test_schema_adapter.py  test_schema_lock_report.py  test_validate_results.py
(+95 files in other folders)
