[project]
name = "captionman"
version = "0.1.0"
description = "Evidence-grounded, judge-aware video captioning runner."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "openai>=1.99.0",
    "pillow>=11.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "rich>=14.0.0",
    "tenacity>=9.1.0",
    "typer>=0.16.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.0",
]

[project.scripts]
captionman = "app.cli.commands:app"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "app"

[tool.ruff]
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
